fix : #27 - 객체 설계 고민 및 자잘한 수정 반영